--- a/Project.Core/Project.Core.csproj
+++ b/Project.Core/Project.Core.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FirebaseAuthentication.net" Version="3.7.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.1.3" />
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="10.0.3" />
