--- a/Project.Web/Project.Web.csproj
+++ b/Project.Web/Project.Web.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Folder Include="Images\" />
+    <Folder Include="CVs\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
